Changes SearchResults, Layout - changes searchResults to fetch data only onSubmit - Layout fixes grid GridItem, Responsive - wraps GridItem image in a-tag, links to giphy URL onClick

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,11 +6,11 @@
   transition: all .5s;
 }
 
-#light{
+#light {
   background-color: #efefef;
 }
 
-#dark{
+#dark {
   background-color: #2B2B2B;
 }
 
@@ -26,7 +26,7 @@
 .heartIcon {
   position: absolute;
   top: 0;
-  right: 0;
+  right: 10%;
   color: rgb(248, 1, 1);
   font-size: 2.5rem;
   margin: 1rem;
@@ -45,6 +45,7 @@
 }
 
 .grid-container {
+  min-height: 60vh;
   line-height: 0;
   -webkit-column-count: 1;
   -webkit-column-gap: 1rem;
@@ -53,28 +54,34 @@
   column-count: 1;
   column-gap: 1rem;
 
-  margin-left: 30%;
   padding: 3.5rem;
-  margin-right: 30%;
 
   border-radius: 15px;
-  width: 100%;
+  width: 90%;
   max-width: 150rem;
   background-color: rgba(0, 0, 0, 0.501);
   box-shadow: 0 5px 10px #111;
 }
+
 .grid-container-light {
   background-color: rgba(227, 227, 227, 0.559);
   box-shadow: 0 0px 10px #bbb
 }
 
 .grid-item {
-  margin: 10px 0;
+  margin: 0 0 1rem 0;
   position: relative;
+  
+  a {
+    img {
+      width: 100%;
+      opacity: .7;
+      transition: all .2s;
 
-  img {
-    width: 30rem;
-    height: 100%;
+      &:hover {
+        opacity: 1;
+      }
+    }
   }
 
   &::before {
@@ -84,29 +91,33 @@
     position: absolute;
     background: rgba(17, 17, 17, 0.6);
     transition: all .2s;
+    z-index: -1;
   }
 
-  &:hover::before {
-    background: rgba(17, 17, 17, 0.2);
-  }
+
 }
 
 .grid-item-random {
   margin: 10px 0;
   position: relative;
+  filter: drop-shadow(0 5px 10px rgba(34, 34, 34, 0.429));
 
-  img {
-    border-radius: 15px;
-    width: 100%;
-    height: 100%;
+  a {
+    img {
+      border-radius: 15px;
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 
 // Responsive Design PHONES
 @media only screen and (max-width: 300px) {
   .grid-item {
-    img {
-      width: 25rem;
+    a {
+      img {
+        width: 100%;
+      }
     }
   }
 
@@ -115,11 +126,8 @@
 @media only screen and (min-width: 400px) {
   .grid-container {
     -webkit-column-count: 1;
-    -webkit-column-gap: 5px;
     -moz-column-count: 1;
-    -moz-column-gap: 5px;
     column-count: 1;
-    column-gap: 5px;
   }
 }
 
@@ -127,16 +135,18 @@
 @media only screen and (min-width: 600px) {
   .grid-container {
     -webkit-column-count: 2;
-    -webkit-column-gap: 7px;
+    -webkit-column-gap: 1rem;
     -moz-column-count: 2;
-    -moz-column-gap: 7px;
+    -moz-column-gap: 1rem;
     column-count: 2;
-    column-gap: 7px;
+    column-gap: 1rem;
   }
 
   .grid-item {
-    img {
-      width: 25rem;
+    a {
+      img {
+        width: 100%;
+      }
     }
   }
 }
@@ -145,11 +155,8 @@
 @media only screen and (min-width: 852px) {
   .grid-container {
     -webkit-column-count: 3;
-    -webkit-column-gap: 9px;
     -moz-column-count: 3;
-    -moz-column-gap: 9px;
     column-count: 3;
-    column-gap: 9px;
   }
 }
 
@@ -157,10 +164,7 @@
 @media only screen and (min-width: 1200px) {
   .grid-container {
     -webkit-column-count: 4;
-    -webkit-column-gap: 10px;
     -moz-column-count: 4;
-    -moz-column-gap: 10px;
     column-count: 4;
-    column-gap: 10px;
   }
 }
